{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 80,
  "lineage": "f0bbb655-441e-7647-9535-0bd8d844de7b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mon-EIP-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bbee312f3242e03b",
            "association_id": "eipassoc-05c4a410f2494873d",
            "domain": "vpc",
            "id": "eipalloc-0bbee312f3242e03b",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0fb5f19d68d1b6f80",
            "private_dns": "ip-192-168-0-155.us-east-2.compute.internal",
            "private_ip": "192.168.0.155",
            "public_dns": "ec2-18-116-175-74.us-east-2.compute.amazonaws.com",
            "public_ip": "18.116.175.74",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jump_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-069d73f3235b535bd",
            "arn": "arn:aws:ec2:us-east-2:300633248970:instance/i-06c621229323cbeff",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06c621229323cbeff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "K8S",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-029cca157e40c1181",
            "private_dns": "ip-192-168-0-36.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.36",
            "public_dns": "ec2-18-118-210-51.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.210.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0eabfc83e35fedeb6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b33e4a23d3135e1e",
            "tags": {
              "Name": "jump host"
            },
            "tags_all": {
              "Name": "jump host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-010d5c60ad5060187"
            ]
          },
          "dependencies": [
            "aws_security_group.mon_sg_jump_host_tf",
            "aws_subnet.mon-public-subnet-tf",
            "aws_vpc.mon-vpc-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mon-mysql-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-069d73f3235b535bd",
            "arn": "arn:aws:ec2:us-east-2:300633248970:instance/i-0bac4b6a7b3d4d7d1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bac4b6a7b3d4d7d1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "K8S",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a33fea07e4eb2177",
            "private_dns": "ip-192-168-1-84.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08300add75f37da89",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07920214c2ae8d483",
            "tags": {
              "Name": "mysql-instance"
            },
            "tags_all": {
              "Name": "mysql-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-037c311b7103e3c5b"
            ]
          },
          "dependencies": [
            "aws_eip.mon-EIP-tf",
            "aws_nat_gateway.mon-NGW-tf",
            "aws_route_table.mon_nat_route_table_tf",
            "aws_route_table_association.mon_route_table_to_pri_sn_tf",
            "aws_security_group.mon-sg-mysql-tf",
            "aws_security_group.mon-sg-wordpress-tf",
            "aws_security_group.mon_sg_jump_host_tf",
            "aws_subnet.mon-private-subnet-tf",
            "aws_subnet.mon-public-subnet-tf",
            "aws_vpc.mon-vpc-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mon-wordpress-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-069d73f3235b535bd",
            "arn": "arn:aws:ec2:us-east-2:300633248970:instance/i-08ff090ed92b7069d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ff090ed92b7069d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "K8S",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0210ab285281edf43",
            "private_dns": "ip-192-168-0-138.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.138",
            "public_dns": "ec2-18-217-108-184.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.108.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0afdb224466710624",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b33e4a23d3135e1e",
            "tags": {
              "Name": "wordpress"
            },
            "tags_all": {
              "Name": "wordpress"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c4f58e643ab4b0f3"
            ]
          },
          "dependencies": [
            "aws_instance.mon-mysql-tf",
            "aws_security_group.mon-sg-wordpress-tf",
            "aws_subnet.mon-public-subnet-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:300633248970:internet-gateway/igw-069ecb3e74d264e6c",
            "id": "igw-069ecb3e74d264e6c",
            "owner_id": "300633248970",
            "tags": {
              "Name": "internet-gateway"
            },
            "tags_all": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-0c40a998124cb5edd"
          },
          "dependencies": [
            "aws_vpc.mon-vpc-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mon-NGW-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bbee312f3242e03b",
            "association_id": "eipassoc-05c4a410f2494873d",
            "connectivity_type": "public",
            "id": "nat-078e9a114e422636f",
            "network_interface_id": "eni-0fb5f19d68d1b6f80",
            "private_ip": "192.168.0.155",
            "public_ip": "18.116.175.74",
            "subnet_id": "subnet-0b33e4a23d3135e1e"
          },
          "dependencies": [
            "aws_eip.mon-EIP-tf",
            "aws_subnet.mon-public-subnet-tf",
            "aws_vpc.mon-vpc-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mon-IG-route-table-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:300633248970:route-table/rtb-00abba076f6d54d53",
            "id": "rtb-00abba076f6d54d53",
            "owner_id": "300633248970",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-069ecb3e74d264e6c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mon-IG-route-table-tf"
            },
            "tags_all": {
              "Name": "mon-IG-route-table-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c40a998124cb5edd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.mon-vpc-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mon_nat_route_table_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:300633248970:route-table/rtb-0ce3e1c6025580126",
            "id": "rtb-0ce3e1c6025580126",
            "owner_id": "300633248970",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-078e9a114e422636f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mon-nat-route-table-tf"
            },
            "tags_all": {
              "Name": "mon-nat-route-table-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c40a998124cb5edd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.mon-NGW-tf",
            "aws_vpc.mon-vpc-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_routetable_to_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e30b8988800b43f",
            "route_table_id": "rtb-00abba076f6d54d53",
            "subnet_id": "subnet-0b33e4a23d3135e1e"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.mon-IG-route-table-tf",
            "aws_subnet.mon-public-subnet-tf",
            "aws_vpc.mon-vpc-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mon_route_table_to_pri_sn_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0393e476527c04a75",
            "route_table_id": "rtb-0ce3e1c6025580126",
            "subnet_id": "subnet-07920214c2ae8d483"
          },
          "dependencies": [
            "aws_eip.mon-EIP-tf",
            "aws_nat_gateway.mon-NGW-tf",
            "aws_route_table.mon_nat_route_table_tf",
            "aws_subnet.mon-private-subnet-tf",
            "aws_subnet.mon-public-subnet-tf",
            "aws_vpc.mon-vpc-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mon-sg-mysql-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:300633248970:security-group/sg-037c311b7103e3c5b",
            "description": "Allow mysql inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037c311b7103e3c5b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-010d5c60ad5060187"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "allow TCP",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c4f58e643ab4b0f3"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20230721183606888200000001",
            "name_prefix": "terraform-",
            "owner_id": "300633248970",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c40a998124cb5edd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mon-sg-wordpress-tf",
            "aws_security_group.mon_sg_jump_host_tf",
            "aws_vpc.mon-vpc-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mon-sg-wordpress-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:300633248970:security-group/sg-0c4f58e643ab4b0f3",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4f58e643ab4b0f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow TCP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-010d5c60ad5060187"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230721183609061100000002",
            "name_prefix": "terraform-",
            "owner_id": "300633248970",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c40a998124cb5edd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mon_sg_jump_host_tf",
            "aws_vpc.mon-vpc-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mon_sg_jump_host_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:300633248970:security-group/sg-010d5c60ad5060187",
            "description": "jump host security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010d5c60ad5060187",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mon-sg-jump-host-tf",
            "name_prefix": "",
            "owner_id": "300633248970",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c40a998124cb5edd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mon-vpc-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mon-private-subnet-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:300633248970:subnet/subnet-07920214c2ae8d483",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07920214c2ae8d483",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "300633248970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mon-private-subnet-tf"
            },
            "tags_all": {
              "Name": "mon-private-subnet-tf"
            },
            "vpc_id": "vpc-0c40a998124cb5edd"
          },
          "dependencies": [
            "aws_vpc.mon-vpc-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mon-public-subnet-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:300633248970:subnet/subnet-0b33e4a23d3135e1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b33e4a23d3135e1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "300633248970",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mon-public-subnet-tf"
            },
            "tags_all": {
              "Name": "mon-public-subnet-tf"
            },
            "vpc_id": "vpc-0c40a998124cb5edd"
          },
          "dependencies": [
            "aws_vpc.mon-vpc-app1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mon-vpc-app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:300633248970:vpc/vpc-0c40a998124cb5edd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-00c4ddb46904ce0c9",
            "default_route_table_id": "rtb-0e6b12a8aa85c379f",
            "default_security_group_id": "sg-0c0a943a3ca46a526",
            "dhcp_options_id": "dopt-09cbd62103583aaf2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c40a998124cb5edd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e6b12a8aa85c379f",
            "owner_id": "300633248970",
            "tags": {
              "Name": "mon-vpc-app1"
            },
            "tags_all": {
              "Name": "mon-vpc-app1"
            }
          }
        }
      ]
    }
  ]
}